--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./route/public/Images/gbu_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GBU Certificate Verification</title>
+    <title>GBU Certificate Authentication</title>
   </head>
   <body>
     <div id="root"></div>
