--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./route/public/Images/gbu_logo.png" />
+    <link rel="icon" type="image/svg+xml" href="./Images/gbu_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GBU Certificate Authentication</title>
   </head>
